added loading of config into Angular client

--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -51,6 +51,7 @@ sub-components.
 		<my-add
 			[dataService]="dataService"
 			[MongoDBCollectionName]="MongoDBCollectionName"
+			[MockarooURL]="defaultMockarooURI"
 			(onCollection)="onCollection($event)">
 		>
 		</my-add>
